--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="wrapper container">
         <h2 class="text-center">Sign up</h2>
-        
+
         <form class="row g-3">
             <div class="col-md-6">
               <label for="inputEmail4" class="form-label">Email</label>
@@ -59,6 +59,11 @@
               <button type="submit" class="btn btn-primary">Sign in</button>
             </div>
           </form>
+    </div>
+
+
+    <div class="extra">
+        <p>updated data</p>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
