--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
   <body>
     
-    <div class="wrapper container">
+    <div class="wrapper container"> 
         <h2 class="text-center">Sign up</h2>
 
-        <form class="row g-3">
+        <form class="row g-3" netlify>
             <div class="col-md-6">
               <label for="inputEmail4" class="form-label">Email</label>
               <input type="email" class="form-control" id="inputEmail4">
